AddColor stretch complete. updated key in ColorList to avoid duplicates (was using color.color, changed to color.id)

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -118,6 +118,7 @@ form {
     color: white;
     padding: 3px 8px;
     margin-top: 16px;
+    cursor: pointer;
   }
 }
 
